# spark-nlp

./: .gitattributes  .gitignore  .sbtrc  .scalafmt.conf  .travis.yml  404.html  CHANGELOG  CNAME  CODE_OF_CONDUCT.md  Dockerfile  ISSUE_TEMPLATE.md  Jenkinsfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  analyze_clinical_notes.html  analyze_financial_models.html  analyze_medical_text_german.html  analyze_medical_text_spanish.html  analyze_non_english_medical_text.html  analyze_non_english_text_documents.html  analyze_spelling_grammar.html  assertion_status.html  benchmarking.json  biomedical_research.html  build.sbt  changes.txt  classify_documents.html  classify_financial_documents.html  classify_medical_texts.html  clinical_trials.html  contribute.html  databricks_solution_accelerators.html  deidentification.html  deidentification_legal.html  demo.html  demos.html  demosold.html  detect_sentiment_emotion.html  diagnoses_procedures.html  (+87 more)
.ci/: Dockerfile  DockerfilePy2  DockerfilePy3  DockerfileSpark23  DockerfileSpark24
.github/: stale.yaml
.lift/: ignoreFiles
.sync/: ignoreFiles
api/: index.html
assets/: browserconfig.xml  search.js  site.webmanifest
conda/: README.md  conda_build_config.yaml  meta.yaml
css/: custom.css  custom.css.map
demos/: infer_meaning_intent.html  legal_text_classification.html
docs/: 404.html  CNAME  Dockerfile  Gemfile  Jenkinsfile  README.md  _config.yml  articles.md  (+28 more)
src/main/native/sentencepiece/: CMakeLists.txt  com_johnsnowlabs_nlp_sentencepiece_SentencePieceJNI.cc  com_johnsnowlabs_nlp_sentencepiece_SentencePieceJNI.h
(+302203 files in other folders)
